# IgraGlagolovBot

./: .gitignore  README.md  create_intents.py  dialogflow_api.py  dialogflow_script.py  igraglagolov-d2904204149b.json  main.py  pyproject.toml  requirements.txt  telegram_bot.py  training_phrases.json  vk_bot.py
