[tool.poetry]
name = "repl_python3_IgraGlagolovBot"
version = "0.1.0"
description = ""
authors = ["Starcoding <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
vk-api = "^11.9.6"
dialogflow = "^1.1.1"
telegram = "^0.0.1"
python-telegram-bot = "^13.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
